XCode project for testing webcam, ofxCv
This is a *lot* easier already than building this using Sublime Text.
(I hit a code-signing issue trying to get `gdb` running on my machine;
this is indicative of how this process looks.)

--- a/webcam_test/Makefile
+++ b/webcam_test/Makefile
@@ -1,16 +1,16 @@
 CFLAGS=-Wall -Wextra $(shell pkg-config --cflags opencv)
-LDFLAGS=$(shell pkg-config --libs opencv)
+LDFLAGS=$(shell pkg-config --libs opencv) -liconv -lzxing
 
 all: webcam_test
 
 webcam_test: CvMatBitmapSource.o main.o
 	g++ $(CFLAGS) $(LDFLAGS) -o webcam_test CvMatBitmapSource.o main.o
 
-CvMatBitmapSource.o: CvMatBitmapSource.h
+CvMatBitmapSource.o: CvMatBitmapSource.cpp CvMatBitmapSource.h
 	g++ -c CvMatBitmapSource.cpp
 
 main.o: main.cpp CvMatBitmapSource.o
 	g++ -c main.cpp
 
 clean:
-	rm webcam_test
+	rm webcam_test *.o
