Working version of library
complete with linking against the library from a separate test
executable!

--- a/vscode/shoulderCodec/.vscode/tasks.json
+++ b/vscode/shoulderCodec/.vscode/tasks.json
@@ -30,7 +30,8 @@
             "command": "make",
             "args": [
                 "Test"
-            ]
+            ],
+            "group": "test"
         },
         {
             "type": "shell",
